--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "method-override": "^3.0.0",
     "pg": "^7.8.0",
     "react": "^16.7.0",
-    "react-dom": "^16.7.0"
+    "react-dom": "^16.7.0",
+    "react-icons": "^3.3.0"
   }
 }
